--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "process": "^0.11.10",
